[tool.poetry]
name = "test_tox"
version = "0.1.0"
description = "doku-demo"
authors = ["geromee <gerome.vivar@gmail.com>"]
license = "MIT"
#readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "^3.20.1"
Sphinx = "^4.1.2"
sphinx-book-theme = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"